--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -41,16 +41,13 @@ jobs:
 
     # Step: Configure Project.
     - name: Configure Project
-      run: |
-        cmake -B build -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DWARNINGS_AS_ERRORS=ON -DSTRICT_WARNINGS=ON
+      run: cmake -B build -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DWARNINGS_AS_ERRORS=ON -DSTRICT_WARNINGS=ON
 
     # Step: Build Project.
     - name: Build Project
-      run: |
-        cmake --build build --config Debug --parallel 2
+      run: cmake --build build --config Debug --parallel 2
 
     # Step: Run Tests.
     - name: Run Tests
-      run: |
-        ctest --test-dir build --build-config Debug --verbose
+      run: ctest --test-dir build --build-config Debug --verbose
     
